--- a/guitt.ui
+++ b/guitt.ui
@@ -6,22 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>313</width>
-    <height>263</height>
+    <width>935</width>
+    <height>487</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(170, 255, 255);</string>
+   <string notr="true">background-color: rgb(170, 255, 255);
+border-color: rgb(0, 0, 0);
+border-bottom-color: rgb(0, 0, 0);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>50</y>
+      <x>90</x>
+      <y>100</y>
       <width>241</width>
       <height>81</height>
      </rect>
@@ -42,8 +44,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>20</y>
+      <x>80</x>
+      <y>80</y>
       <width>251</width>
       <height>51</height>
      </rect>
@@ -64,8 +66,8 @@
    <widget class="QPushButton" name="run">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>180</y>
+      <x>140</x>
+      <y>260</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -80,9 +82,9 @@
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>-10</x>
-      <y>210</y>
-      <width>341</width>
+      <x>10</x>
+      <y>340</y>
+      <width>351</width>
       <height>16</height>
      </rect>
     </property>
@@ -93,9 +95,9 @@
    <widget class="QTextEdit" name="filename">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>130</y>
-      <width>211</width>
+      <x>60</x>
+      <y>200</y>
+      <width>261</width>
       <height>31</height>
      </rect>
     </property>
@@ -104,13 +106,142 @@
 background-color: rgb(255, 255, 255);</string>
     </property>
    </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>-20</y>
+      <width>20</width>
+      <height>471</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>350</y>
+      <width>341</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Enter the file name of a .tfc file </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>380</y>
+      <width>291</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>(if it is different directory,enter its full path)</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>400</y>
+      <width>341</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Click on Generate truth table fo generate levelwise</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>420</y>
+      <width>161</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>output of the circuit.</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>61</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../../Downloads/oie_9pRVZObquCEJ.png</pixmap>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>20</y>
+      <width>271</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>14</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>ASSAM UNIVERSITY, SILCHAR</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>50</y>
+      <width>241</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Computer Science &amp; Engineering</string>
+    </property>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>0</y>
+      <width>561</width>
+      <height>441</height>
+     </rect>
+    </property>
+    <property name="source">
+     <url>
+      <string>file:///home/joy/Desktop/test/correct_output.txt</string>
+     </url>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>313</width>
+     <width>935</width>
      <height>23</height>
     </rect>
    </property>
